feat: rework persistence of parts and prices